--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,2 +1,10 @@
 before_script: 
   - docker info
+
+build_image: 
+ script: 
+  - docker build -t registry.gitlab.com/daniel.obernay/laravel-demo .
+
+push_image: 
+ script: 
+  - docker push registry.gitlab.com/daniel.obernay/laravel-demo
